--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,12 @@ on:
         type: string
         required: false
         default: ""
+      v8_version:
+        description: version of v8 platform wich is needed to install.
+        type: string
+        required: false
+        default: ""          
+        
 
 jobs:
   build:
@@ -64,6 +70,17 @@ jobs:
       - name: Установка дополнительных пакетов
         if: inputs.additional_oscript_packages != ''
         run: opm install -l ${{ inputs.additional_oscript_packages }}
+
+      - name: Установка 1С:Предприятие
+        if: inputs.v8_version != ''
+        uses: 1CDevFlow/onec-setup-action@main
+        with:
+          type: onec # Тип устанавливаемого приложения
+          onec_version: ${{ inputs.v8_version }}
+          cache: false
+        env: 
+          ONEC_USERNAME: ${{ secrets.ONEC_USERNAME }}
+          ONEC_PASSWORD: ${{ secrets.ONEC_PASSWORD }} 
 
       - name: Тестирование
         run: oscript ${{ inputs.test_script_path}}
