тест проброса лицензии

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,5 +86,18 @@ jobs:
           ONEC_USERNAME: ${{ secrets.ONEC_USERNAME }}
           ONEC_PASSWORD: ${{ secrets.ONEC_PASSWORD }} 
 
+      - name: Установка лицензии
+        if: inputs.v8_version != ''
+        run: |
+          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
+            sudo mkdir -p /var/1C/licenses
+            echo "${{ secrets.ONEC_LICENCE }}" | sudo tee /var/1C/licenses/licence.lic > /dev/null
+          elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+            mkdir "C:\ProgramData\1C\licenses" -Force
+            echo $Env:ONEC_LICENCE | Out-File -FilePath "C:\ProgramData\1C\licenses\licence.lic" -Encoding ascii
+          fi
+        env:
+          ONEC_LICENCE: ${{ secrets.ONEC_LICENCE }}
+
       - name: Тестирование
         run: oscript ${{ inputs.test_script_path}}
