Тест изменение переменной

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,4 +99,6 @@ jobs:
   
       - name: Тестирование
         shell: cmd
+        env:
+          WORKSPACE: ''
         run: oscript ${{ inputs.test_script_path}}
