добавил обнуление переменной воркспейс

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,6 +99,8 @@ jobs:
   
       - name: Тестирование
         shell: cmd
+        env:
+          RUNNER_WORKSPACE: ''
         run: |
           set
           oscript ${{ inputs.test_script_path}}
