--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -96,7 +96,17 @@ jobs:
         shell: pwsh
         env:
             ONEC_LICENCE: ${{ secrets.ONEC_LICENCE }}
-  
+
+      - name: Создание файла конфигурации conf.cfg
+        if: inputs.v8_version != '' && matrix.os == 'windows-latest'
+        run: |
+              New-Item -ItemType Directory -Force -Path "C:\Program Files\1cv8\conf"
+              Set-Content -Path "C:\Program Files\1cv8\conf\conf.cfg" -Value @'
+              DisableUnsafeActionProtection=.*
+              SystemLanguage=System
+              '@
+        shell: pwsh 
+
       - name: Тестирование
         shell: cmd
         run: oscript ${{ inputs.test_script_path}}
